--- a/source/index.html
+++ b/source/index.html
@@ -15,8 +15,8 @@
 
 <body class="page__body">
   <header class="main-header">
-    <nav class="main-nav">
-      <div class="main-nav__header wrapper">
+    <nav class="main-nav wrapper">
+      <div class="main-nav__header">
         <a class="logo" href="index.html">
           <picture>
             <source width="70" height="59" type="image/svg+xml" media="(min-width: 1280px)" srcset="images/logo-pic-desktop.svg">
@@ -53,16 +53,22 @@
       </div>
     </nav>
     <section class="promo">
-      <h1 class="promo__main-header wrapper">Функциональное питание для котов</h1>
-      <p class="promo__slogan wrapper">Занялся собой? Займись котом!</p>
-      <picture class="promo__picture">
-        <source width="552" height="499" type="image/png" media="(min-width: 1280px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
-        <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
-        <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
-      </picture>
-      <a class="promo__button button wrapper" href="#">
-        Подобрать программу
-      </a>
+      <div class="wrapper">
+        <div class="promo__content">
+          <h1 class="promo__main-header">Функциональное питание для котов</h1>
+          <p class="promo__slogan">Занялся собой? Займись котом!</p>
+          <picture class="promo__picture">
+            <source width="552" height="499" type="image/png" media="(min-width: 1280px)" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
+            <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
+            <img class="promo__promo-image" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" alt="Промо фото продукции" width="280" height="270">
+          </picture>
+          <a class="promo__button button" href="#">
+            Подобрать программу
+          </a>
+        </div>
+
+      </div>
+
     </section>
   </header>
   <main class="main-container">
@@ -77,7 +83,7 @@
               Похудение
             </h3>
             <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="programs__link button" href="catalog.html">
+            <a class="programs__link" href="catalog.html">
               Каталог SLIM
             </a>
           </li>
@@ -86,7 +92,7 @@
               Набор массы
             </h3>
             <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="programs__link button" href="catalog.html">
+            <a class="programs__link" href="catalog.html">
               Каталог PRO
             </a>
           </li>
@@ -110,48 +116,53 @@
         </li>
       </ul>
     </section>
-    <section class="example ">
-      <header class="example__header wrapper">
-        <h2 class="example__subheader">Живой пример</h2>
-        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+    <section class="example">
+      <div class="example__content wrapper">
+        <div class="example__header ">
+          <h2 class="example__subheader">Живой пример</h2>
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-      </header>
-      <div class="example__wrapper wrapper">
-        <ul class="example__list site-list">
-          <li class="example__item">
-            <span class="example__item-text">5 кг</span>
-            <span class="example__item-text-second">снижение веса</span>
-          </li>
-          <li class="example__item">
-            <span class="example__item-text">60 дней</span>
-            <span class="example__item-text-second">затрачено время</span>
-          </li>
-        </ul>
-        <span class="example__text">
-          Затраты на питание: 15 000 РУБ.
-        </span>
+        </div>
+        <div class="example__wrapper ">
+          <ul class="example__list site-list">
+            <li class="example__item">
+              <span class="example__item-text">5 кг</span>
+              <span class="example__item-text-second">снижение веса</span>
+            </li>
+            <li class="example__item">
+              <span class="example__item-text">60 дней</span>
+              <span class="example__item-text-second">затрачено время</span>
+            </li>
+          </ul>
+          <span class="example__text">
+            Затраты на питание: 15 000 РУБ.
+          </span>
+        </div>
+        <div class="cat-slider">
+          <picture>
+            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-after-tablet@1x.png 1x, images/state-after-tablet@2x.png 2x">
+            <img class="cat-slider__image" src="images/state-after-mobile@1x.png" srcset="images/state-after-mobile@2x.png 2x" alt="Фото котика до функционального питания" width="280" height="256">
+          </picture>
+          <picture>
+            <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-before-tablet@1x.png 1x, images/state-before-tablet@2x.png 2x">
+            <img class="cat-slider__image" src="images/state-before-mobile@1x.png" srcset="images/state-before-mobile@2x.png 2x" alt="Фото котика на функциональном питании" width="280" height="256">
+          </picture>
+          <div class="cat-slider__control"></div>
+        </div>
       </div>
-      <div class="cat-slider wrapper">
-        <picture>
-          <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-after-tablet@1x.png 1x, images/state-after-tablet@2x.png 2x">
-          <img class="cat-slider__image" src="images/state-after-mobile@1x.png" srcset="images/state-after-mobile@2x.png 2x" alt="Фото котика до функционального питания" width="280" height="256">
-        </picture>
-        <picture>
-          <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/state-before-tablet@1x.png 1x, images/state-before-tablet@2x.png 2x">
-          <img class="cat-slider__image" src="images/state-before-mobile@1x.png" srcset="images/state-before-mobile@2x.png 2x" alt="Фото котика на функциональном питании" width="280" height="256">
-        </picture>
-        <div class="cat-slider__control"></div>
-      </div>
+
     </section>
   </main>
   <footer class="main-footer">
     <section class="contacts">
-      <div class="contacts__main wrapper">
-        <h3 class="contacts__header">приглашаем к сотрудничеству дилеров!</h3>
-        <div class="contacts__address">
-          <span class="contacts__address-text">ул. Большая
-            Конюшенная, д. 19/8</span>
-          <span class="contacts__address-text">Санкт-Петербург</span>
+      <div class="wrapper">
+        <div class="contacts__main">
+          <h3 class="contacts__header">приглашаем <br>к сотрудничеству дилеров!</h3>
+          <div class="contacts__address">
+            <span class="contacts__address-text">ул. Большая
+              Конюшенная, д. 19/8</span>
+            <span class="contacts__address-text">Санкт-Петербург</span>
+          </div>
         </div>
       </div>
 
